updated styles to fix mobile problems

--- a/client/src/pages/vehicleDisplay.css
+++ b/client/src/pages/vehicleDisplay.css
@@ -38,6 +38,9 @@
 @media (max-width: 769px) {
   .garageSidebar{
     width: 100%;
+    text-align: center;
+    justify-items: center;
+    align-items: center;
   }
   
   .garageMain{
