--- a/client/src/pages/vehicles.css
+++ b/client/src/pages/vehicles.css
@@ -66,4 +66,13 @@
     width: 90%;
     justify-content: center;
   }
+
+  .carFormInputWrapper{
+    width: 100%;
+    justify-content: center;
+  }
+
+  .width40{
+    width: 100%;
+  }
 }
